# fastrack

./: .gitignore  .travis.yml  LICENSE  README.md  compile.sh  deploy.sh  deploy_key.enc  github_deploy_key.enc
crazyflie_clean/crazyflie_clean/ros/src/crazyflie_examples/: CMakeLists.txt  package.xml
crazyflie_clean/crazyflie_clean/ros/src/crazyflie_examples/launch/: hw_hover.launch  move_server.launch  sw_hover.launch
crazyflie_clean/crazyflie_clean/ros/src/crazyflie_examples/src/: move_server.py  move_server_node.py
crazyflie_clean/crazyflie_clean/ros/src/crazyflie_msgs/: CMakeLists.txt  package.xml
crazyflie_clean/crazyflie_clean/ros/src/crazyflie_msgs/msg/: Control.msg  ControlStamped.msg  FullState.msg  FullStateStamped.msg  NoYawControl.msg  NoYawControlStamped.msg  PositionVelocityState.msg  PositionVelocityStateStamped.msg  PositionVelocityYawState.msg  PositionVelocityYawStateStamped.msg  PrioritizedControl.msg  PrioritizedControlStamped.msg
crazyflie_clean/crazyflie_clean/ros/src/crazyflie_state_estimator/: CMakeLists.txt  package.xml
crazyflie_clean/crazyflie_clean/ros/src/crazyflie_state_estimator/exec/: full_state_estimator_node.cpp  position_velocity_state_estimator_node.cpp  position_velocity_yaw_state_estimator_node.cpp
crazyflie_clean/crazyflie_clean/ros/src/crazyflie_state_estimator/src/: full_state_estimator.cpp  position_velocity_state_estimator.cpp  position_velocity_yaw_state_estimator.cpp  state_estimator.cpp
crazyflie_clean/crazyflie_clean/ros/src/crazyflie_utils/: CMakeLists.txt  package.xml
doc/: manifest.yaml
ros/src/fastrack/: CMakeLists.txt  manifest.dox  manifest.xml  package.xml  rosdoc.yaml
ros/src/fastrack/exec/: analytical_quadrotor_decoupled_tracker_demo_node.cpp  ompl_kinematic_planner_demo_node.cpp  replanner_node.cpp
ros/src/fastrack/include/fastrack/bound/: box.h  cylinder.h  sphere.h  tracking_bound.h  tracking_bound_ros.h
ros/src/fastrack/include/fastrack/control/: control_bound.h  quadrotor_control.h  quadrotor_control_bound_box.h  quadrotor_control_bound_cylinder.h  scalar_bound_interval.h  vector_bound_box.h
ros/src/fastrack/include/fastrack/dynamics/: dynamics.h  kinematics.h  planar_dubins_dynamics_3d.h  quadrotor_6d.h  quadrotor_coupled_6d.h  quadrotor_decoupled_6d.h  quadrotor_decoupled_6d_rel_kinematics.h  quadrotor_decoupled_6d_rel_planar_dubins_3d.h  quadrotor_decoupled_planar_dubins.h  relative_dynamics.h
ros/src/fastrack/include/fastrack/environment/: balls_in_box.h  balls_in_box_occupancy_map.h  environment.h  kdtree_map.h  occupancy_map.h
ros/src/fastrack/include/fastrack/planning/: graph_dynamic_planner.h  kinematic_planner.h  ompl_kinematic_planner.h  planar_dubins_planner.h  planner.h  planner_manager.h  replanner.h  searchable_set.h  trajectory.h
ros/src/fastrack/include/fastrack/sensor/: sensor.h  sphere_sensor.h  sphere_sensor_params.h
ros/src/fastrack/include/fastrack/space/: position_velocity.h  state.h
ros/src/fastrack/include/fastrack/state/: planar_dubins_3d.h  position_velocity.h  position_velocity_rel_planar_dubins_3d.h  position_velocity_rel_position_velocity.h  relative_state.h  state.h
ros/src/fastrack/include/fastrack/tracking/: tracker.h
ros/src/fastrack/include/fastrack/trajectory/: trajectory.h  trajectory_interpreter.h
ros/src/fastrack/include/fastrack/utils/: kdtree_map.h  matlab_file_reader.h  searchable_set.h  types.h  uncopyable.h
ros/src/fastrack/launch/: replanner.launch
ros/src/fastrack/matlab/: ComputeTEB.m  PlotValueXY.m  README.md  value_function.mat
ros/src/fastrack/matlab/@Mass4DRelDubins/: Mass4DRelDubins.m  dynamics.m  optCtrl.m  optDstb.m
ros/src/fastrack/modules/: FindMatio.cmake
ros/src/fastrack/src/: analytical_kinematic_box_quadrotor_decoupled_6d.cpp  balls_in_box.cpp  balls_in_box_occupancy_map.cpp  environment.cpp  matlab_file_reader.cpp  planar_dubins_3d.cpp  planar_dubins_planner.cpp  position_velocity.cpp  quadrotor_decoupled_6d_rel_planar_dubins_3d.cpp  replanner.cpp  state.cpp  trajectory.cpp
ros/src/fastrack/test/: test_control_bounds.cpp  test_kdtree_map.cpp  test_main.cpp
ros/src/fastrack_crazyflie_demos/: CMakeLists.txt  package.xml
ros/src/fastrack_crazyflie_demos/exec/: analytical_quadrotor_decoupled_tracker_demo_node.cpp  control_converter_demo_node.cpp  matlab_quadrotor_decoupled_tracker_demo_node.cpp  ompl_kinematic_planner_demo_node.cpp  planar_dubins_planner_demo_node.cpp  planar_dubins_planner_manager_demo_node.cpp  planar_dubins_reference_converter_demo_node.cpp  position_velocity_planner_manager_demo_node.cpp  position_velocity_reference_converter_demo_node.cpp  position_velocity_trajectory_interpreter_demo_node.cpp  reference_converter_demo_node.cpp  sphere_sensor_demo_node.cpp  state_converter_demo_node.cpp
ros/src/fastrack_crazyflie_demos/include/fastrack_crazyflie_demos/: control_converter.h  reference_converter.h  state_converter.h
ros/src/fastrack_crazyflie_demos/launch/: analytical_quadrotor_decoupled_tracker.launch  control_converter.launch  matlab_quadrotor_decoupled_tracker.launch  ompl_kinematic_planner.launch  planar_dubins_planner.launch  planar_dubins_planner_manager.launch  planar_dubins_reference_converter.launch  position_velocity_planner_manager.launch  position_velocity_reference_converter.launch  position_velocity_trajectory_interpreter.launch  reference_converter.launch  rviz.launch  software_demo.launch  software_dubins_demo.launch  sphere_sensor.launch  state_converter.launch
ros/src/fastrack_crazyflie_demos/rviz/: fastrack_crazyflie_demos.rviz
ros/src/fastrack_crazyflie_demos/src/: control_converter.cpp  reference_converter.cpp  state_converter.cpp
ros/src/fastrack_msgs/: CMakeLists.txt  package.xml
ros/src/fastrack_msgs/msg/: Control.msg  ReplanRequest.msg  SensedSpheres.msg  State.msg  Trajectory.msg
ros/src/fastrack_srvs/: CMakeLists.txt  package.xml
ros/src/fastrack_srvs/srv/: GeometricPlannerSpeed.srv  KinematicPlannerDynamics.srv  PlanarDubinsPlannerDynamics.srv  Replan.srv  SphereSensor.srv  TrackingBoundBox.srv  TrackingBoundCylinder.srv  TrackingBoundSphere.srv
(+979 files in other folders)
