<?xml version="1.0"?>
<package>
  <name>fastrack_crazyflie_demos</name>
  <version>0.0.0</version>
  <description>The fastrack_crazyflie_demos package</description>

  <author email="dfk@eecs.berkeley.edu">David Fridovich-Keil</author>
  <maintainer email="dfk@eecs.berkeley.edu">David Fridovich-Keil</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>fastrack</build_depend>
  <build_depend>fastrack_msgs</build_depend>
  <build_depend>crazyflie_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>fastrack</run_depend>
  <run_depend>fastrack_msgs</run_depend>
  <run_depend>crazyflie_msgs</run_depend>
</package>
