<?xml version="1.0"?>
<package>
  <name>fastrack_msgs</name>
  <version>0.0.0</version>
  <description>The fastrack_msgs package</description>

  <author email="dfk@eecs.berkeley.edu">David Fridovich-Keil</author>
  <maintainer email="dfk@eecs.berkeley.edu">David Fridovich-Keil</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
