<?xml version="1.0"?>
<package>
  <name>crazyflie_examples</name>
  <version>0.0.0</version>
  <description>The crazyflie_examples package</description>

  <author email="dfk@eecs.berkeley.edu">David Fridovich-Keil</author>
  <maintainer email="dfk@eecs.berkeley.edu">David Fridovich-Keil</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>crazyflie_msgs</build_depend>
  <build_depend>crazyflie_utils</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>crazyflie_msgs</run_depend>
  <run_depend>crazyflie_utils</run_depend>
</package>
