<?xml version="1.0"?>
<package>
  <name>crazyflie_state_estimator</name>
  <version>0.0.0</version>
  <description>The crazyflie_state_estimator package</description>

  <author email="dfk@eecs.berkeley.edu">David Fridovich-Keil</author>
  <maintainer email="dfk@eecs.berkeley.edu">David Fridovich-Keil</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>crazyflie_utils</build_depend>
  <build_depend>crazyflie_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>crazyflie_utils</run_depend>
  <run_depend>crazyflie_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
